# FileManager

./: CMakeLists.txt  README.md  main.cpp  test.txt
file_class/: FileError.cpp  FileError.h  FileManager.cpp  FileManager.h
headers/: File.h  FileError.h  file_operation.cpp  file_operation.h
src/: File.cpp  FileError.cpp  file_operation.cpp  main.cpp
tinyxml/: CMakeLists.txt
